# cli-assistant

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
ai/: __init__.py  agent.py  assistant.py
cli_assistant/: cli.py
cli_assistant/ai/: __init__.py  agent.py  llm.py
cli_assistant/ai/assistants/: boilerplate.py  chat.py  do.py  explain.py  man.py  readmify.py  summarize.py
tests/: run_tests.sh  test_agent.py  test_boilerplate.py  test_chat.py  test_cli.py  test_do.py  test_explain.py  test_man.py  test_readmify.py  test_summarize.py
