[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-assistant"
version = "0.1.0"
authors = [
  { name="Tiago Bagni", email="tibagni@gmail.com" },
]
description = "An AI-powered command-line assistant to supercharge your terminal."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# This is the magic part!
# It tells pip to create a command called `assist`
# that runs the `main` function from your `cli.py` module.
[project.scripts]
assist = "cli_assistant.cli:main"